cluster/apps/networking/coredns/k8s-gateway/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all-to-k8s-gateway"
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: k8s-gateway
  ingress:
    - fromEntities:
        - all
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '1053'
              protocol: UDP
